objects/Activity_Result_Mapping__c.object
<CustomObject>
    <description>Used by trigger to determine which Campaign Member Status to update based on the Activity Result set by Attend Reps</description>
    <fields>
        <fullName>Activity_Result__c</fullName>
        <label>Activity Result</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Status_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Campaign Member Status Template</label>
        <referenceTo>CampaignMemberStatusTemplate__c</referenceTo>
        <relationshipLabel>Activity Result Mappings</relationshipLabel>
        <relationshipName>Activity_Result_Mappings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exclude_Statuses__c</fullName>
        <description>List of campaign member statuses we should not override based on activity results</description>
        <label>Exclude Statuses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <formula>Campaign_Member_Status_Template__r.SortOrder__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SortOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Activity Result Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Activity_Result__c</columns>
        <columns>Product__c</columns>
        <columns>Campaign_Member_Status_Template__c</columns>
        <columns>SortOrder__c</columns>
        <columns>Exclude_Statuses__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Mapping ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Result Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>